<resources>
    <string name="app_name">12Talk</string>
    <string name="action_settings">Settings</string>
    <string name="title_message">消息</string>
    <string name="title_friends">好友</string>
    <string name="title_news">看点</string>
    <string name="title_space">空间</string>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="user_permission">登录即代表阅读并同意</string>
    <string name="user_permission_bt">服务条款</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="new_user">新用户注册</string>
    <string name="regiter">注册</string>
    <string name="input_phone">输入手机号</string>
    <string name="next">下一步</string>
    <string name="input_code">输入短信验证码</string>
    <string name="code">验证码</string>
    <string name="resend">重新发送</string>

    <string name="phone_register_permission">注册即代表阅读并同意使用条款和隐私条款</string>
    <string name="phone_code_notice">我们已经给+8615281674841发送了一个6位数的验证码</string>

    <string name="navigation_message">消息</string>
    <string name="navigation_constact">通讯录</string>
    <string name="navigation_news">发现</string>
    <string name="navigation_space">朋友圈</string>

    <!--以下为提示字-->
    <string name="error_phone">输入的手机号有误，请检查后输入</string>
    <string name="error_send_phone">发送验证码失败，请稍后重试</string>
    <string name="success_send_phone">验证码已经发送至%s，请及时查收</string>
    <string name="error_code">验证码错误，请确认后输入</string>
    <string name="empty_params">输入参数为空，请检查后重试</string>
    <string name="net_error">网络异常，请稍后重试</string>
    <string name="register_success">注册成功，正在跳转登录</string>
    <string name="unknown_host">网络异常，请打开网络</string>
    <string name="http_time_out">请求超时</string>
    <string name="http_connect_failed">连接失败</string>
    <string name="http_error">请求失败</string>

</resources>
